<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright 2021 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
  <string name="app_name" translatable="false">Transformer Demo</string>
  <string name="configuration" translatable="false">Configuration</string>
  <string name="select_preset_file_title" translatable="false">Choose preset file</string>
  <string name="select_local_file_title">Choose local file</string>
  <string name="local_file_picker_failed">File couldn\'t be opened. Please try again.</string>
  <string name="remove_audio" translatable="false">Remove audio</string>
  <string name="remove_video" translatable="false">Remove video</string>
  <string name="flatten_for_slow_motion" translatable="false">Flatten for slow motion</string>
  <string name="audio_mime" translatable="false">Output audio MIME type</string>
  <string name="video_mime" translatable="false">Output video MIME type</string>
  <string name="resolution_height" translatable="false">Output video resolution</string>
  <string name="scale" translatable="false">Scale video</string>
  <string name="rotate" translatable="false">Rotate video (degrees)</string>
  <string name="enable_fallback" translatable="false">Enable fallback</string>
  <string name="enable_debug_preview" translatable="false">Enable debug preview</string>
  <string name="abort_slow_export" translatable="false">Abort slow export</string>
  <string name="produce_fragmented_mp4" translatable="false">Produce fragmented MP4</string>
  <string name="trim" translatable="false">Trim</string>
  <string name="hdr_mode" translatable="false">HDR mode</string>
  <string name="select_audio_effects" translatable="false">Add audio effects</string>
  <string name="select_video_effects" translatable="false">Add video effects</string>
  <string name="periodic_vignette_options" translatable="false">Periodic vignette options</string>
  <string name="no_media_pipe_error" translatable="false">Failed to load MediaPipeShaderProgram. Check the README for instructions.</string>
  <string name="export" translatable="false">Export</string>
  <string name="debug_preview" translatable="false">Debug preview:</string>
  <string name="cancel" translatable="false">Cancel</string>
  <string name="resume" translatable="false">Resume</string>
  <string name="debug_preview_not_available" translatable="false">No debug preview available.</string>
  <string name="export_started" translatable="false">Export started</string>
  <string name="export_timer" translatable="false">Export started %d seconds ago.</string>
  <string name="export_completed" translatable="false">Export completed in %.3f seconds.\nOutput: %s</string>
  <string name="export_error" translatable="false">Export error</string>
  <string name="trim_range">Bounds in seconds</string>
  <string-array name="color_filter_options">
    <item>Grayscale</item>
    <item>Inverted</item>
    <item>Sepia</item>
  </string-array>
  <string name="contrast_value" translatable="false">Contrast value</string>
  <string name="rgb_adjustment_options" translatable="false">Scale RGB Channels individually</string>
  <string name="rgb_adjustment_scale_red" translatable="false">Scale red</string>
  <string name="rgb_adjustment_scale_green" translatable="false">Scale green</string>
  <string name="rgb_adjustment_scale_blue" translatable="false">Scale blue</string>
  <string name="center_x">Center X</string>
  <string name="center_y">Center Y</string>
  <string name="radius_range">Radius range</string>
  <string name="hsl_adjustment_options" translatable="false">HSL adjustment options</string>
  <string name="hue_adjustment">Hue adjustment</string>
  <string name="saturation_adjustment">Saturation adjustment</string>
  <string name="lightness_adjustment">Lightness adjustment</string>
  <string name="input_image">Input image:</string>
  <string name="input_video_no_sound">Input video (tap to play sound):</string>
  <string name="input_video_playing_sound">Input video (sound playing):</string>
  <string name="output_video_no_sound">Output video (tap to play sound):</string>
  <string name="output_video_playing_sound">Output video (sound playing):</string>
  <string name="permission_denied">Permission Denied</string>
  <string name="hide_input_video">Hide input video</string>
  <string name="show_input_video">Show input video</string>
  <string name="force_audio_track">Force audio track</string>
  <string name="overlay_alpha">Alpha</string>
  <string name="overlay_uri">Uri</string>
  <string name="bitmap_overlay_settings">Specify bitmap overlay settings</string>
  <string name="select_local_image">Select local image</string>
  <string name="overlay_text">Text</string>
  <string name="overlay_text_color">Text color</string>
  <string name="text_overlay_settings">Specify text overlay settings</string>
  <string name="preview" translatable="false">Preview</string>
  <string name="preview_single_sequence" translatable="false">Single sequence preview</string>
  <string name="single_sequence_items" translatable="false">Single sequence items:</string>
  <string name="edit">Edit</string>
</resources>
